--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "./src/index.js",
   "dependencies": {
-    "lodash": "^4.17.15"
+    "bootstrap": "^4.3.1",
+    "css-loader": "^3.2.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "style-loader": "^1.0.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.4",
