--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "./src/index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "style-loader": "^1.0.0"
