--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bulma": "^0.7.5",
     "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0"
   },
   "devDependencies": {
