--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/index.js",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "bulma-start": "0.0.3"
   },
   "devDependencies": {
     "bulma": "^0.7.5",
