--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "bulma-pageloader": "^2.1.0",
     "bulma-start": "0.0.3"
   },
   "devDependencies": {
