--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bulma-pageloader": "^2.1.0",
-    "bulma-start": "0.0.3"
+    "bulma-start": "0.0.3",
+    "bulma-switch": "^2.0.0"
   },
   "devDependencies": {
     "bulma": "^0.7.5",
