--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "./src/index.js",
   "dependencies": {
     "axios": "^0.19.0",
-    "bulma-pageloader": "^2.1.0",
     "bulma-start": "0.0.3",
-    "bulma-switch": "^2.0.0"
+    "simple-parallax-js": "^5.1.0"
   },
   "devDependencies": {
     "bulma": "^0.7.5",
