--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./src/index.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "bulma-divider": "^0.2.0",
+    "bulma-extensions": "^6.2.7",
     "bulma-start": "0.0.3",
     "simple-parallax-js": "^5.1.0"
   },
