--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bulma-divider": "^0.2.0",
     "bulma-extensions": "^6.2.7",
     "bulma-start": "0.0.3",
-    "simple-parallax-js": "^5.1.0"
+    "simple-parallax-js": "^5.1.0",
+    "youtube-search-api-with-axios": "^2.0.0"
   },
   "devDependencies": {
     "bulma": "^0.7.5",
