--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bulma-extensions": "^6.2.7",
     "bulma-start": "0.0.3",
     "simple-parallax-js": "^5.1.0",
+    "wikijs": "^6.0.1",
     "youtube-api-search": "0.0.5",
     "youtube-search-api-with-axios": "^2.0.0"
   },
